[package]
name = "lusdt_token"
version = "0.1.0"
authors = ["LUSDT Team"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
common = { path = "../common", default-features = false }

# [dev-dependencies]
# ink_e2e disabled - compatibility issues with ink 4.2.1
# ink_e2e = { version = "4.2.1" }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
