[package]
name = "staking_manager"
version = "0.1.0"
authors = ["LUSDT Team"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
common = { path = "../common", default-features = false }

[dev-dependencies]
drink = { version = "0.1.0", features = ["session"] }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "common/std",
]
ink-as-dependency = []
e2e-tests = []
