[package]
name = "tax_manager"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
common = { path = "../common", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }
mock_flipper = { path = "../mock_flipper", default-features = false, features = ["ink-as-dependency"] }
drink = { version = "0.1.0", features = ["session"] }
mock_lunes_token = { path = "../mock_lunes_token", default-features = false, features = ["ink-as-dependency"] }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = [] 